<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/itinerary_origin" />

    <EditText
        android:id="@+id/origin_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itinerary_destination" />

    <EditText
        android:id="@+id/destination_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itinerary_departureDate" />

    <EditText
        android:id="@+id/date_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/date_format"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/search_options_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/itinerary_search_options"
        android:prompt="@string/search_method_prompt" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:onClick="searchItineraries"
        android:text="@string/search_itineraries"
        android:textColor="@android:color/white" />
</LinearLayout>
