<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".frontend.PersonalInformation"
    tools:showIn="@layout/activity_edit_information">

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:hint="@string/address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/credit_card_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:hint="@string/credit_card_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/credit_card_expiry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credit_card_number"
        android:hint="@string/credit_card_expiry_date"
        android:inputType="date" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/credit_card_expiry"
        android:layout_marginTop="27dp"
        android:background="#d95454"
        android:onClick="updateInfo"
        android:text="@string/update"
        android:textColor="#fdfcfc" />

</RelativeLayout>
