<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs.b07.cscb07project.frontend.MenuActivity"
    tools:showIn="@layout/activity_menu">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/edit_personal_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcome_message"
        android:layout_marginTop="80dp"
        android:onClick="editPersonalInfo"
        android:text="@string/view_edit_personal_info" />

    <Button
        android:id="@+id/flight_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_personal_info"
        android:onClick="promptSearch"
        android:text="@string/search_flight" />

    <Button
        android:id="@+id/itinerary_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/flight_search"
        android:onClick="promptItinerarySearch"
        android:text="@string/search_itineraries" />

    <Button
        android:id="@+id/view_booked_itinerary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/itinerary_search"
        android:onClick="viewBooked"
        android:text="@string/view_booked_itinerary" />

    <Button
        android:id="@+id/view_edit_client_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view_booked_itinerary"
        android:onClick="editClientInfo"
        android:text="@string/view_edit_client_info"
        android:visibility="invisible" />

    <Button
        android:id="@+id/edit_flight_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/upload_flight_info"
        android:onClick="displayFlights"
        android:text="Edit flight information"
        android:visibility="invisible" />

    <Button
        android:id="@+id/upload_flight_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view_edit_client_info"
        android:onClick="uploadFlightInfo"
        android:text="@string/upload_flight_info"
        android:visibility="invisible" />

    <Button
        android:id="@+id/upload_client_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_flight_info"
        android:onClick="uploadClientInfo"
        android:text="@string/upload_user_info"
        android:visibility="invisible" />


</RelativeLayout>