<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <EditText
        android:id="@+id/login_id_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_id_field"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_id_field"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:background="#d95454"
        android:onClick="authLogin"
        android:text="@string/sign_in"
        android:textColor="#fdfcfc" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/signin_button"
        android:layout_marginTop="27dp"
        android:background="#cccccc"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textColor="#616161" />
</RelativeLayout>
